# bofirepp-api

./: .gitignore  README.md  bofire_campaigns.db  database.py  main.py  pyproject.toml  requirements.txt
campaigns_data/ac2fe3a3-7e8e-45fe-bbb6-97030d034be2/: campaign.json  strategy.json
core/: config.py
db/: database.py  models.py
llm/: __init__.py  apollo.py  base.py  gemini.py
models/: campaign.py  domain.py  experiment.py  strategy.py
routers/: campaigns.py  domains.py  experiments.py  health.py  llm.py  strategies.py
storage/: __init__.py  campaigns.py
tests/: conftest.py  test_campaigns.py  test_domains.py  test_experiments.py  test_health.py  test_strategies.py
tutorials/: 01_getting_started.md  02_domain_design.md  03_campaigns.md  04_strategies.md  05_llm_integration.md  README.md
