[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bofirepp-api"
version = "0.1.0"
description = "A REST API built on top of BoFire, providing Bayesian optimization capabilities over HTTP with Swagger UI documentation."
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0.0",
    "bofire>=0.0.14",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
optimization = [
    "bofire[optimization]>=0.0.14",
    "torch",
    "botorch",
    "scipy",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/KislayaRavi/bofirepp-api"
Repository = "https://github.com/KislayaRavi/bofirepp-api"
Issues = "https://github.com/KislayaRavi/bofirepp-api/issues"

[project.scripts]
bofirepp-api = "main:app"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
