[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bofirepp-api"
version = "0.1.0"
description = "A REST API built on top of BoFire, providing Bayesian optimization capabilities over HTTP with Swagger UI documentation."
readme = "README.md"
license = "BSD-3-Clause"
packages = [
    {include = "core"},
    {include = "db"},
    {include = "llm"},
    {include = "models"},
    {include = "routers"},
    {include = "storage"},
]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.32.0"}
pydantic = ">=2.9.0"
pydantic-settings = ">=2.0.0"
sqlalchemy = ">=2.0.0"
bofire = {extras = ["optimization"], version = ">=0.0.14"}
pandas = ">=2.0.0"
numpy = ">=1.26.0"
python-multipart = ">=0.0.12"
httpx = ">=0.27.0"
google-genai = ">=1.0.0"

[tool.poetry.group.optimization.dependencies]
torch = "*"
botorch = "*"
scipy = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.27.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
